# STARMODEL

./: .gitignore  README.md  compare.py  data.csv  export_trainer_log.py  extract_star_sentences.py  matchingKeywords.py  nlpAttempt.py  nlpAttempt2.py  output.txt  picklizer.py  predict_star.py  pyproject.toml  sampleResponse.csv  sentances.py  star_trainer.py  train_history.csv  training.py  usage.py  visualize_star.py
data/: cleaned_df.csv  data.csv  exported_df.csv  star_labels.csv
figures/: rollout_highlight.html
